# homeassistant-homevolt-local

./: .coverage  .gitignore  .tool-versions  AGENTS.md  HACS_SETUP.md  LICENSE  README.md  TESTING.md  docker-compose.yml  ems_example.json  hacs.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.env  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  hacs-validation.yml  release.yml  validation.yml
custom_components/homevolt_local/: __init__.py  config_flow.py  const.py  manifest.json  models.py  sensor.py  services.yaml  strings.json
custom_components/homevolt_local/tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_models.py  test_sensor.py  test_utils.py
custom_components/homevolt_local/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_const.py  test_coordinator.py  test_models.py  test_sensor.py
