[project]
name = "homeassistant-homevolt-local"
version = "0.1.0"
description = "Home Assistant custom component for Homevolt Local"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0,<4.0.0",
    "voluptuous>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest-homeassistant-custom-component",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["custom_components/homevolt_local/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::pytest.PytestRemovedIn9Warning",
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning"
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C4", "B", "SIM"]
ignore = ["E501"]
